# foamshot

./: .SRCINFO  .envrc  Cargo.toml  LICENSE  PKGBUILD  README.md  rustfmt.toml
CHANGELOG/: v0.0.2.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.7.md
debug_layer/: .envrc  Cargo.toml
debug_layer/src/: imp.rs  main.rs
src/: action.rs  cairo_render.rs  cli.rs  config.rs  foam_outputs.rs  foam_shot.rs  foamcore.rs  foamshot.rs  frame_queue.rs  freeze_mode.rs  lib.rs  main.rs  monitors.rs  notify.rs  pointer_helper.rs  result_output.rs  save_helper.rs  screen_copy_helper.rs  select_mode.rs  select_rect.rs  shot_foam.rs  shot_fome.rs  utility.rs  wayland_ctx.rs  zwlr_screencopy_mode.rs
src/bak/: mod.rs  monitor_helper.rs
src/helper/: mod.rs  monitor_helper.rs  pointer_helper.rs  save_helper.rs
src/imp/: imp_shot_foam.rs  impl_foam_shot.bak.rs  impl_foam_shot.rs  impl_shot_foam.rs  impl_shot_foam_dispatch.rs  mod.rs
src/mode/: editor_mode.rs  freeze_mode.rs  mod.rs  result_mode.rs  select_mode.rs
src/protocols/: keyboard.rs  mod.rs  pointer.rs  wp_cursor_shape_manager_v1.rs  wp_fractional_scale_v1.rs  wp_viewporter.rs  xdg.rs  zwlr_layer_shell_v1.rs  zwlr_screencopy_manager_v1.rs
src/save_helper/: common.rs  ffmpeg.rs  jpg.rs  mod.rs  png.rs  wl_clipboard.rs
